Prevent usage on small screens

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 @import "bulma/sass/utilities/_all";
 
 $orange:       #ff470f;
-$yellow:       #ffe08a;
+$yellow:       #f5bf2b;
 $green:        #34a126;
 $turquoise:    #44d3bd;
 $cyan:         #3e8ed0;
